--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>eu.tradegrid</groupId>
     <artifactId>mod-tinkerpop-persistor</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.1-SNAPSHOT</version>
     
     <name>Vert.x Tinkerpop Persistor Module</name>
     <description>A simple database persistence module for Vert.x that uses Tinkerpop Blueprints and Tinkerpop Gremlin 
@@ -79,6 +79,7 @@
         <maven.jxr.version>2.3</maven.jxr.version>
         <maven.javadoc.plugin.version>2.9</maven.javadoc.plugin.version>
         <maven.dependency.plugin.version>2.7</maven.dependency.plugin.version>
+        <maven.release.plugin.version>2.4.1</maven.release.plugin.version>
     </properties>
 
     <repositories>
@@ -332,6 +333,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+        
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
             </plugin>
         </plugins>
         
